--- a/about.html
+++ b/about.html
@@ -1,103 +1,100 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <title>Jen Kramer Portfolio</title>
+    <script src="https://kit.fontawesome.com/536494c2fa.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Ojochegbe Alikali's Portfolio</title>
 </head>
 
 <body>
     <nav>
         <ul>
-            <li>
-                <h1>
-                    <a href="index.html"><span class="fas fa-code" aria-hidden="true"></span> Jen
-              Kramer</a
-            >
-          </h1>
+          <li>
+            <h1>
+                <a
+                 href="index.html">
+                 <span class="fa-solid fa-code" aria-hidden="true"></span>
+                 <span class>Ojochegbe Alikali</span>
+                </a>
+            </h1>
         </li>
         <li><a href="index.html#projects">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="index.html#contact">Contact</a></li>
-            <li>
-                <a href="https://www.linkedin.com/in/jen4web/" target="_blank">
-                    <span class="fab fa-linkedin" aria-hidden="true"></span>
-                    <span class="sr-only">LinkedIn</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.github.com/jen4web" target="_blank">
-                    <span class="fab fa-github-square" aria-hidden="true"></span>
-                    <span class="sr-only">Github</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.dropbox.com/s/3z2hm5gu3v2lrfy/JenKramerCV.pdf?dl=0" target="_blank" class="button">Resume</a
-          >
+        <li><a href="about.html">About</a></li>
+        <li><a href="index.html#contact">Contact</a></li>
+        <li>
+          <a
+             href="https://www.linkedin.com/in/ojochegbe-alikali/" target="_blank">
+             <span class="fa-brands fa-linkedin" aria-hidden="true"></span>
+             <span class="sr-only">LinkedIn</span>
+            </a>
+        </li>
+        <li>
+            <a 
+             href="https://github.com/UniqueOJ" target="_blank">
+            <span class="fa-brands fa-github" aria-hidden="true"></span>
+            <span class="sr-only">Github</span>
+          </a>
+        </li>
+        <li><a href="https://ojochegbe-alikali.netlify.app/" class="button" target="_blank">Resume</a></li>
+      </ul>
+      </nav>
+      
+      <div class="gradient"></div>
+    <div class="section-dkblue">
+      <section id="projects">
+        <h2>About Ojochegbe Alikali</h2>
+        <article>
+            <div class="text">
+              <h3>Just The Highlights</h3>
+              <p class="blackbox">
+                A highly talented professional, eager to contribute to team success through hard work, attention to detail, and excellent organizational skills.
+                Currently, I am working as an intern with <a href="https://devcareer.io/">Devcareer</a>
+              </p>
+              <h4>My Favourite technologies includes:</h4>
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>React</li>
+              </ul>
+            </div>
+              <img src="/images/chegbe.jpg" alt="Screenshot of the Online-Resume."/>
+          </article>
+        </section>
+    </div>
+
+    <div class="gradient"></div>
+    <footer>
+      <h2>Ojochegbe Alikali &middot; Developer</h2>
+      <ul>
+        <li>
+          <a href="https://www.linkedin.com/in/ojochegbe-alikali/" target="_blank">
+            <span class="fab fa-linkedin" aria-hidden="true"></span>
+            <span class="sr-only">LinkedIn</span>
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/UniqueOJ" target="_blank">
+            <span class="fab fa-github-square" aria-hidden="true"></span>
+            <span class="sr-only">Github</span>
+          </a>
+        </li>
+        <li>
+          <a href="mailto:joyalikali77@gmail.com">
+            <span class="fas fa-envelope" aria-hidden="true"></span>
+            <span class="sr-only">Email</span>
+          </a>
         </li>
       </ul>
-    </nav>
-    <div class="gradient"></div>
-    <div class="section-blue">
-      <section id="projects">
-        <h2>About Jen Kramer</h2>
-        <article>
-          <div class="text">
-            <h3>Just the highlights</h3>
-            <p class="blackbox">
-              Description of the project. This should be fairly concise while
-              also describing the key components that you developed or worked
-              on. It can be as long as you need it to be but should at least be
-              a few sentences long. Be sure to include specific links anywhere
-              in the description. A link looks like
-              <a href="https://frontendmasters.github.io/grid-flexbox-v2/"
-                >this</a
-              >, and multiple links look <a href="#">like this</a> and
-                <a href="#">like this</a>.
-                </p>
-                <h4>My favorite technologies include:</h4>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>UX</li>
-                </ul>
-                </div>
-                <img src="img/pexels-christina-morillo-1181267.jpg" alt="Christina Morillo at Pexels." />
-                </article>
-                </section>
-                </div>
-                <div class="gradient"></div>
-                <footer>
-                    <h2>Jen Kramer &middot; Educator</h2>
-                    <ul>
-                        <li>
-                            <a href="https://www.linkedin.com/in/jen4web" target="_blank">
-                                <span class="fab fa-linkedin" aria-hidden="true"></span>
-                                <span class="sr-only">LinkedIn</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.github.com/jen4web" target="_blank">
-                                <span class="fab fa-github-square" aria-hidden="true"></span>
-                                <span class="sr-only">Github</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="mailto:jen@example.com">
-                                <span class="fas fa-envelope" aria-hidden="true"></span>
-                                <span class="sr-only">Email</span>
-                            </a>
-                        </li>
-                    </ul>
-                    <p><small>&copy; 2021 Jen Kramer. All rights reserved.</small></p>
-                </footer>
+      <p><small>&copy; 2022 Ojochegbe Alikali. All rights reserved.</small></p>
+    </footer>
 </body>
 
 </html>
