--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <span class="sr-only">Github</span>
     </a>
   </li>
-  <li><a href="https://ojochegbe-alikali.netlify.app/" class="button" target="_blank">Resume</a></li>
+  <li><a href="https://docs.google.com/document/d/1UkzkL9-GDbqo3l9OCcY5PwUtgL0DkfX8871LXRKihAI/edit" class="button" target="_blank">Resume</a></li>
 </ul>
 </nav>
 
@@ -65,9 +65,9 @@
       <h2>Projects I'm proud of</h2>
       <article>
         <div class="text">
-        <h4>Mentor's Project</h4>
+        <h4>Personal Project</h4>
         <h3>Landing Page</h3>
-        <p class="blackbox">Description of the project. I created a landing page which is a stand alone webpage by implementing a figma design. Key Components worked on were the service section, client's section, teams sections and contact section. 
+        <p class="blackbox">Description of the project : I created a landing page which is a stand alone webpage by implementing a figma design. Key Components worked on were the service section, client's section, teams sections and contact section. 
           Check out my codes <a href="https://github.com/UniqueOJ/Landing-Page">here</a>, and deployed webpage url <a href="https://ojlandingpage.netlify.app/">here</a>.
         </p>
         <h4>Technologies used include:</h4>
@@ -87,7 +87,7 @@
         <h4>Mini Project</h4>
         <h3>Product Card</h3>
         <p class="blackbox">
-          Description of the project. I created a product card, by implementing a design gotten from <a href="https://www.frontendmentor.io/challenges/product-preview-card-component-GO7UmttRfa">frontend mentors</a>.
+          Description of the project : I created a product card, by implementing a design gotten from <a href="https://www.frontendmentor.io/challenges/product-preview-card-component-GO7UmttRfa">frontend mentors</a>.
           Check out my codes <a href="https://github.com/UniqueOJ/Product-Preview-Card">here</a>, and deployed webpage <a href="https://ojproductcard.netlify.app/">here</a>.</p>
         </p>
         <h4>Technologies used include:</h4>
@@ -105,7 +105,7 @@
         <h4>Capstone Project</h4>
         <h3>Online Resume</h3>
         <p class="blackbox">
-          Description of the project. I created an online resume which is a digital version of my resume that includes my contact information, professional summary, relevant skills and important media links. 
+          Description of the project : I created an Online Resume using HTML, CSS and Javascript and hosted it on NETLIFY. This project was an assessement of my skills on the use of Git, HTML, CSS and Javascript.
           Check out my codes <a href="https://github.com/UniqueOJ/Capstone_Project">here</a>, and deployed webpage url <a href="https://ojochegbe-alikali.netlify.app/">here</a>.
         </p>
         <h4>Technologies used include:</h4>
