--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
       <span class="sr-only">Github</span>
     </a>
   </li>
-  <li><a href="https://docs.google.com/document/d/1UkzkL9-GDbqo3l9OCcY5PwUtgL0DkfX8871LXRKihAI/edit" class="button" target="_blank">Resume</a></li>
+  <li><a href="https://docs.google.com/document/d/1UkzkL9-GDbqo3l9OCcY5PwUtgL0DkfX8871LXRKihAI/edit?usp=share_link
+    " class="button" target="_blank">Resume</a></li>
 </ul>
 </nav>
 
